sylva/base/static/css/base.css
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,
acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,
sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,
caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,
figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,
audio,video {
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
    margin: 0;
    padding: 0;
}

body {
    line-height: normal;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    text-rendering: optimizelegibility;
    -webkit-font-smoothing: antialiased;
    font-size: 13px;
    font-weight: 400;
    color: #555;
    background-color: #f2f2f2;
}

h2 {
    font: normal 19px Georgia;
    color: #348E82;
    padding-bottom: 5px;
    padding-top: 5px;
    text-overflow: inherit;
}

dl {
    margin-bottom: 20px;
}

dt, dd {
    line-height: 20px;
}

dt {
    font-weight: bold;
}

dd {
    margin-left: 10px;
}

blockquote, q {
    quotes: inherit;
    font-size: 95%;
    padding-top: 0px;
    padding-right: 0px;
    padding-bottom: 0px;
    padding-left: 16px;
}

blockquote:before, blockquote:after, q:before, q:after {
    content: inherit;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

th {
    cursor: pointer;
    font-size: 115%;
    font-weight: bold;
/*    display: inline-block;*/
/*    margin-top: 10px;*/
}

fieldset {
    margin-bottom: 15px;
}

textarea {
    overflow: auto;
    height: 80px;
}

label {
    cursor: pointer;
    font-size: 115%;
    font-weight: bold;
    display: inline-block;
/*    margin-top: 10px;*/
}

button, input, select, textarea {
    margin: 0;
}

button {
    width: auto;
    overflow: visible;
}

abbr {
    border-bottom: .1em dotted;
    cursor: help;
}

strong, b {
    font-weight: bold;
}

.clear {
    clear: both;
    display: block;
    overflow: hidden;
    visibility: hidden;
    width: 0;
    height: 0;
    margin: 20px 0 20px 0;
}

.hidden {
    display: none;
}

.bold {
    font-weight: bold;
}

.inline {
    display: inline-block;
}

.max600 {
    overflow: hidden;
    max-height: 600px;
}

.max600:hover {
    overflow: auto;
    max-height: 600px;
}

.medium-width {
    width: 700px;
}

a.disabled,a.disabled:hover {
    cursor: default;
    color: #B0B0B0;
    font-style: italic;
    text-decoration: none;
}

.clearfix:after {
    clear: both;
    content: ' ';
    display: block;
    font-size: 0;
    line-height: 0;
    visibility: hidden;
    width: 0;
    height: 0;
}

* html .clearfix, :first-child+html .clearfix {
    zoom: 1;
}

#main {
    padding-top: 50px;
}

#main header.global {
    width: 1170px;
    background-color: white;
    margin: auto;
    padding: 10px 15px 5px 15px;
}

#main header.global .nav-wrapper {
    display: block;
    width: 100%;
    height: 50px;
    position: absolute;
    top: 0;
    left: 0;
    background: #B8D0C3;
    border-bottom: 1px solid #348E82;
}

#main header.global .nav-wrapper .inside {
    width: 1200px;
    height: 49px;
    background-image: url(../img/sylva_logo_text_header.png);
    background-repeat: no-repeat;
    background-position: 10px 4px;
    background-color: #D6E7DF;
    margin: auto;
}

#main header.global nav.contact {
    float:left;
    text-shadow:0 1px 1px rgba(0,0,0,0.9);
    padding-left: 90px;
}

#main header.global nav.contact ul {
    margin-left: 50px;
}

#main header.global nav.contact ul li {
    margin-right: 40px;
    line-height: 16px;
}

#main header.global nav.contact ul li h2 {
    font-size: 11px;
    color: #a1a1a1;
    font-weight: 400;
}

#main legend {
    font: normal 19px Georgia;
    color: #348E82;
    padding-bottom: 5px;
    padding-top: 5px;
}

select#h2-relationships {
    font: normal 18px Georgia;
    color: #348E82;
    padding-bottom: 5px;
    padding-top: 5px;
    border: none;
    padding-left: 0;
    margin-left: 0;
    border-image: initial;
    margin-top: initial;
    box-shadow: none;
    cursor: pointer;
}

span.all-relationships label {
    display: block;
}

#main header.global nav.contact ul li a {
    font-size: 11px;
    font-weight: 700;
    color: #FFF;
    text-decoration: none;
    border-bottom: solid 1px #505050;
    padding-bottom: 2px;
}

#main header.global nav.contact ul li a:hover {
    color: #FFF;
    text-shadow: 0 0 2px rgba(255,255,255,0.5);
    border-bottom: solid 1px #FFF;
}

#main header.global nav.main ul {
    margin-right: 15px;
}

#main header.global nav.main ul li {
    margin-left: 10px;
}

/* Home lings */
a.signup {
    background: #FFF url(../img/shut-down.png) no-repeat 0 center;
}

a.login {
    background: #FFF url(../img/agent.png) no-repeat 0 center;
}

a.logout {
    background: #FFF url(../img/shut-down.png) no-repeat 0 center;
}

a.plans {
    background: #FFF url(../img/badge.png) no-repeat 0 center;
}

#main header.global nav.main ul li a.text {
    border: none;
    background: none;
    color: #348E82;
    border-radius: none;
    box-shadow: none;
    -moz-border-radius: none;
    -webkit-border-radius: none;
}

#main header.global select#nodeTypeNavigation {
    display: inline;
/*    height: 20px;*/
    padding: 0px;
    margin: 0px;
    top: 7px;
    position: relative;
    float: right;
    max-width: 300px;
    width: auto;
}

#main header.global nav.main ul li a {
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.9);
    display: block;
    margin-top: 1px;
    font-size: 12px;
    font-weight: 700;
    color: #262626;
    text-decoration: none;
    padding: 5px 5px 5px 5px;
    background-color: white;
}

#main header.global nav.main ul li a.active {
    opacity: 0.2;
    cursor: default;
}
/* ... */

